Minor bugs fixed

--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"/usr/lib/jvm/java-8-openjdk-amd64","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"],[{"location":"/home/luismi/Documentos/repos/psp-ad-spring-2018-19/RestBasicAuthDB","type":"PROJECT","hints":{"PROJECT_NAME":"RestBasicAuthDB"}},"com.salesianostriana:RestBasicAuthDB:0.0.1"]]
